# Freetype-Example

./: CMakeLists.txt  README.md  font_renderer.cpp  font_renderer.h  font_renderer_utils.cpp  font_renderer_utils.h  main.cpp
resources/shaders/: lcdFont.frag  normalFont.frag  normalFont.vert  sdfFont.frag
